syntax = "proto3";

package chef.automate.api.iam.v2;
option go_package = "github.com/chef/automate/components/automate-gateway/api/iam/v2/request";

import "google/protobuf/wrappers.proto";

message CreateTokenReq {
    // Unique, user-specified ID. Cannot be changed.
    string id = 1;
    // User-specified name.
    string name = 2;
    // Active state. Defaults to true.
    // If set to false, token will not be authenticated or authorized.
    google.protobuf.BoolValue active = 3;
    // Unique, optionally user-specified value.
    string value = 4;
    // Array of projects the token is in. Empty by default.
    repeated string projects = 5;
}


message GetTokenReq {
    string id = 1;
}

message UpdateTokenReq {
    // Unique, user-specified ID. Cannot be changed.
    string id = 1;
    // User-specified name.
    string name = 2;
    // Active state. Defaults to true.
    // If set to false, token will not authenticate.
    google.protobuf.BoolValue active = 3;
    // Array of projects token is in. Empty by default.
    repeated string projects = 5;
}

message DeleteTokenReq {
    string id = 1;
}

message ListTokensReq {}

message ResetAllTokenProjectsReq {}
